<resources>
    <string-array name="cities">
        <item>Екатеринбург</item>
    </string-array>
    <string-array name="schools">
        <item>Гимназия 108</item>
    </string-array>
    <string-array name="classes">
        <item> </item>
    </string-array>
    <string name="app_name">Fin game</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_5002">Твой счёт: 500</string>
    <string name="msg_452">45 минут с момента начала игры истекли.

Что увидеть заработанную сумму денег, нажми на кнопку \u201cЗавершить игру\u201d.</string>
    <string name="lbl4">а</string>
    <string name="lbl5">с</string>
    <string name="lbl2">и</string>
    <string name="lbl3">н</string>
    <string name="msg_c">c. Третий вариант</string>
    <string name="msg_b">b. Второй вариант</string>
    <string name="lbl_300">300</string>
    <string name="msg_a">a. Первый вариант</string>
    <string name="lbl_52">5А</string>
    <string name="lbl_53">5 зданий</string>
    <string name="msg_500">500 игровых рублей</string>
    <string name="lbl70">Правила</string>
    <string name="lbl71">Рейтинг</string>
    <string name="lbl72">Твой счёт: </string>
    <string name="lbl73">Правильно!</string>
    <string name="wrong">Неверно :(</string>
    <string name="lbl74">Время вышло!</string>
    <string name="lbl75">ЗАВЕРШИТЬ ИГРУ</string>
    <string name="lbl76">Новый пароль</string>
    <string name="lbl_42">4.</string>
    <string name="msg20">Мы хотим заработать денег и купить ему крылья, чтобы он смог летать, как остальные драконы. </string>
    <string name="msg15">Что не понравилось</string>
    <string name="msg14">Мне понравились интересные вопросы, удобство использования</string>
    <string name="lbl_400">400</string>
    <string name="msg17">Напиши комментарий...</string>
    <string name="msg16">Напиши о минусах...</string>
    <string name="lbl20">Регистрация</string>
    <string name="msg11">Надеемся еще встретиться с тобой в нашей игре!</string>
    <string name="lbl21">СОЗДАТЬ</string>
    <string name="msg10">Задания и правильные ответы к ним можно посмотреть, вернувшись на карту города. </string>
    <string name="lbl22">Введи имя</string>
    <string name="msg13">Нам очень важно знать, что ты думаешь об игре. Насколько тебе понравилось играть?</string>
    <string name="lbl23">Введи фамилию</string>
    <string name="msg12">*довольное урчание*</string>
    <string name="lbl24">Придумай пароль</string>
    <string name="lbl25">СОЗДАТЬ</string>
    <string name="lbl26">ШКОЛА</string>
    <string name="lbl27">Легкий </string>
    <string name="lbl28">Средний</string>
    <string name="msg19">Привет! Меня зовут Аня. У нас с Севой есть домашний дракон Огонёк. К сожалению, у него нет крыльев и он не умеет летать.  </string>
    <string name="lbl29">Сложный</string>
    <string name="msg18">Дмитрий Кочевников</string>
    <string name="lbl_32">3.</string>
    <string name="lbl8">я
</string>
    <string name="lbl9">г</string>
    <string name="lbl6">о</string>
    <string name="lbl7">в</string>
    <string name="lbl10">р</string>
    <string name="lbl11">-</string>
    <string name="lbl12">к</string>
    <string name="lbl13">е</string>
    <string name="lbl14">т</string>
    <string name="lbl15">Введи пароль</string>
    <string name="reg">Регистрация</string>
    <string name="lbl17">ВОЙТИ</string>
    <string name="lbl18">Введите имя</string>
    <string name="lbl19">Введите фамилию</string>
    <string name="enter">ВВЕСТИ</string>
    <string name="msg">Финансовая
игра-квест </string>
    <string name="lbl_32_54">32:54</string>
    <string name="msg40">. Правильно ответив, ты получишь игровые рубли. </string>
    <string name="msg42">Мне всё понятно. Можем начинать?</string>
    <string name="lbl_22">2.</string>
    <string name="msg41">В конце игры все игровые рубли складываются. У кого больше, тот и победил. Узнаем, кто заработал больше всех на крылья для нашего Огонька!</string>
    <string name="msg37">В каждом из зданий ты сможешь выбрать один из трёх вопросов. Правильно ответив, ты получишь игровые рубли. </string>
    <string name="msg36">. Посещение каждого здания стоит 100 рублей.</string>
    <string name="lbl40">Город</string>
    <string name="msg39">один из трёх вопросов</string>
    <string name="lbl41">Школа</string>
    <string name="msg38">В каждом из зданий ты сможешь выбрать </string>
    <string name="lbl42">Класс</string>
    <string name="msg33">:  школу, банкомат, торговый центр, магазин, банк. </string>
    <string name="lbl_500">0</string>
    <string name="rating">Рейтинг игроков</string>
    <string name="rating_leaders">Лидеры рейтинга</string>
    <string name="msg32">Отлично! Мы очень рады, что ты решил помочь. В ходе игры мы посетим </string>
    <string name="lbl44">Аня Корюкова</string>
    <string name="msg35">В начале игры у тебя есть </string>
    <string name="lbl45">Максим Соколов</string>
    <string name="msg34">В начале игры у тебя есть 500 игровых рублей. Посещение каждого здания стоит 100 рублей.</string>
    <string name="lbl46">Марина Иванова</string>
    <string name="lbl47">Лена Витковская</string>
    <string name="lbl48">...</string>
    <string name="lbl49">Развернуть</string>
    <string name="lbl_e_mail">Введи e-mail</string>
    <string name="lbl_40_03">00:00</string>
    <string name="msg31">Отлично! Мы очень рады, что ты решил помочь. В ходе игры мы посетим 5 зданий:  школу, банкомат, торговый центр, магазин, банк. </string>
    <string name="msg30">*радостное фырканье*</string>
    <string name="msg26">Спасибо, что помогал нам! Теперь нам хватит на новенькие крылья для Огонька!</string>
    <string name="msg25">Чтобы увидеть, сколько денег заработали другие игроки, нажми на кнопку \u201cДалее\u201d.</string>
    <string name="msg28">. Теперь нам хватит на новенькие крылья для Огонька!</string>
    <string name="lbl30">ВЫБРАТЬ</string>
    <string name="msg27">Спасибо, что помогал нам! Ты заработал целых </string>
    <string name="lbl31">КОНЕЦ ИГРЫ</string>
    <string name="msg22">Стоимость вопроса: 200</string>
    <string name="lbl32">Аня</string>
    <string name="msg21">Ты поможешь нам заработать денег для Огонька?</string>
    <string name="lbl33">Сева</string>
    <string name="msg24">Здесь будет какой-то очень длинный вопрос. Или не очень длинный вопрос. Возможно, даже короткий вопрос.

Но в этом поле нужно предположить, что вопрос может быть довольно длинным. 

Какой вариант ты выберешь?</string>
    <string name="lbl">Ф</string>
    <string name="seva">Сева</string>
    <string name="reks">Огонёк</string>
    <string name="msg23">Стоимость вопроса: </string>
    <string name="lbl_3002">Твой счет: 300</string>
    <string name="lbl35">ДАЛЕЕ</string>
    <string name="lbl36">ОСТАВИТЬ ОТЗЫВ</string>
    <string name="lbl37">Что понравилось</string>
    <string name="lbl38">Комментарий</string>
    <string name="lbl39">Пропустить</string>
    <string name="msg29">Да, конечно, я вам помогу. Что нужно сделать?</string>
    <string name="msg_4">Введи 4-значный код,
который выдал тебе учитель</string>
    <string name="lbl_0">     0</string>
    <string name="lbl_1">1.</string>
    <string name="msg61">У тебя есть всего 45 минут!</string>
    <string name="msg60">В конце игры все игровые рубли складываеются. У кого  больше, тот и победил. </string>
    <string name="lbl_200">200</string>
    <string name="lbl60">\?</string>
    <string name="msg59">. Правильно ответив на вопрос, ты получаешь игровые рубли.</string>
    <string name="lbl61">ОТВЕТИТЬ</string>
    <string name="msg58">одно из трёх заданий</string>
    <string name="lbl_202">20.</string>
    <string name="lbl62">Поздравляем!</string>
    <string name="lbl63">Твой счет: </string>
    <string name="lbl64">ВОССТАНОВЛЕНИЕ</string>
    <string name="msg55">. Посещение каждого здания стоит 100 игровых рублей.</string>
    <string name="msg_e_ma">Введи свой e-mail, чтобы мы могли отправить на него ссылку для восстановления пароля</string>
    <string name="lbl65">Ты</string>
    <string name="msg54">В начале игры ты получаешь </string>
    <string name="lbl66">ПОНЯТНО</string>
    <string name="msg57">В каждом из зданий ты можешь выбрать </string>
    <string name="lbl67">*фырк*</string>
    <string name="msg56">В каждом из зданий ты можешь выбрать одно из трёх заданий. Правильно ответив на вопрос, ты получаешь игровые рубли.</string>
    <string name="lbl68">НАЧАТЬ ИГРУ</string>
    <string name="lbl69">Учебник</string>
    <string name="lbl_161">Гимназия 161</string>
    <string name="lbl_00_00">00:00</string>
    <string name="msg4">Нажимая на кнопку «Создать», вы соглашаетесь с условиями политики обработки персональных данных </string>
    <string name="msg3">Для продолжения регистрации попроси родителей ознакомиться с политикой обработки персональных данных. </string>
    <string name="msg2">Введи код, \nкоторый выдал тебе учитель</string>
    <string name="msg8">Спасибо, что помогал нам! К сожалению, тебе не удалось заработать игровых рублей, но зато ты узнал много нового, и нам было весело!</string>
    <string name="msg7">Выбери один из трёх вопросов. Стоимость зависит от выбранной сложности.</string>
    <string name="msg6">Принимаю условия политики обработки персональных данных </string>
    <string name="msg5">Нажимая на кнопку «Создать», вы соглашаетесь с условиями </string>
    <string name="msg51">В ходе игры ты можешь посетить </string>
    <string name="msg50">В ходе игры ты можешь посетить 5 зданий: школу, банкомат, торговый центр, магазин, банк. </string>
    <string name="msg53">В начале игры ты получаешь 500 игровых рублей. Посещение каждого здания стоит 100 игровых рублей.</string>
    <string name="msg9">Мы хотим заработать денег и купить ему крылья, чтобы он смог летать, как и остальные драконы. </string>
    <string name="msg52">: школу, банкомат, торговый центр, магазин, банк. </string>
    <string name="lbl_45_00">45:00</string>
    <string name="msg48">Пароли не совпадают</string>
    <string name="lbl50">В МЕНЮ</string>
    <string name="msg47">Подтверди новый пароль</string>
    <string name="lbl51">ОГОНЁК</string>
    <string name="lbl52">СЕВА</string>
    <string name="msg49">Перед началом игры необходимо ознакомиться с правилами</string>
    <string name="lbl53">АНЯ</string>
    <string name="msg44">Ура! Огонёк наконец-то сможет летать. Давай начинать!</string>
    <string name="lbl54">ПРАВИЛА ИГРЫ</string>
    <string name="msg43">Запомни, что на всё про всё у тебя 45 минут.  Если вдруг забудешь правила, нажимай на знак вопроса внизу карты.</string>
    <string name="lbl55">ПОМОЧЬ</string>
    <string name="msg46">Введи свой новый пароль</string>
    <string name="lbl56">БАНК</string>
    <string name="msg45">Спасибо! Ты правильно ответил на вопрос и смог помочь мне. За это ты получаешь вонаграждение :)</string>
    <string name="msg45r">К сожалению, ты неверно ответил на вопрос и не смог помочь жителю города, поэтому ты не получаешь награду.</string>
    <string name="lbl57">РЫНОК</string>
    <string name="lbl58">ЛАВКА</string>
    <string name="lbl59">БАНКОМАТ</string>
    <string name="lbl_20_00">20:00</string>
    <string name="title_activity_task">Task</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_rating">rating</string>
</resources>