<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearRow"
    android:layout_height="@dimen/_30pxh"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <TextView
        android:ellipsize="end"
        android:id="@+id/txtPosition"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_1pxv"
        android:layout_weight="0.08"
        android:layout_width="0dp"
        android:singleLine="true"
        android:text="@string/lbl_1"
        style="@style/txtMontserratsemibold15"
        tools:text="@string/lbl_1" />

    <TextView
        android:ellipsize="end"
        android:id="@+id/txtName"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_19pxh"
        android:layout_marginTop="@dimen/_1pxv"
        android:layout_weight="0.92"
        android:layout_width="0dp"
        android:singleLine="true"
        android:text="@string/lbl44"
        style="@style/txtMontserratmedium15"
        tools:text="@string/lbl44" />

    <TextView
        android:ellipsize="end"
        android:id="@+id/txtScore"
        android:layout_height="wrap_content"
        android:layout_weight="0.62"
        android:layout_width="0dp"
        android:singleLine="true"
        android:gravity="end"
        android:text="@string/lbl_500"
        style="@style/txtMontserratbold15_1"
        tools:text="@string/lbl_500" />

    <ImageView
        android:id="@+id/imageCoinsTwo"
        android:layout_height="@dimen/_18pxh"
        android:layout_marginBottom="@dimen/_1pxv"
        android:layout_marginStart="@dimen/_6pxh"
        android:layout_marginTop="@dimen/_1pxv"
        android:layout_width="@dimen/_18pxh"
        android:scaleType="fitXY"
        android:src="@drawable/img_coins_2"
        tools:ignore="ContentDescription"
        tools:src="@drawable/img_coins_2" />
</LinearLayout>
