<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameOne"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/blured_back">

    <LinearLayout
        android:id="@+id/linearColumnleftarrowone"
        android:layout_gravity="top|start"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10pxv"
        android:layout_marginTop="@dimen/_9pxv"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:gravity="start"
                android:id="@+id/linearRowleftarrowone"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                style="@style/groupStylegray_300">

                <ImageView
                    android:id="@+id/imageLeftarrowOne"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginBottom="@dimen/_25pxv"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="@dimen/_25pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_left_arrow"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_left_arrow" />

                <TextView
                    android:ellipsize="end"
                    android:id="@+id/txtEightySeven"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:layout_marginStart="@dimen/_60pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/reg"
                    android:textAllCaps="true"
                    style="@style/txtMontserratbold20"
                    tools:text="@string/reg" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:background="@drawable/rectangle_bg_gray_300_b2_radius_25"
            android:ellipsize="end"
            android:hint="@string/lbl17"
            android:id="@+id/etGroupEight"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@={registrationVM.registrationModel.etGroupEightValue}"
            android:textColorHint="@color/black_900_66"
            style="@style/etSolidRounded"
            tools:ignore="Autofill" />

        <EditText
            android:background="@drawable/rectangle_bg_gray_300_b2_radius_25"
            android:ellipsize="end"
            android:hint="@string/lbl_161"
            android:id="@+id/etGroupSeven"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:text="@={registrationVM.registrationModel.etGroupSevenValue}"
            android:textColorHint="@color/black_900_66"
            style="@style/etSolidRounded"
            tools:ignore="Autofill" />

        <TextView
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtGroupSix"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingTop="@dimen/_18pxv"
            android:singleLine="true"
            android:text="lbl_52"
            style="@style/txtSolidRounded"
            tools:text="@string/lbl_52" />

        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_25"
            android:ellipsize="end"
            android:hint="@string/lbl18"
            android:id="@+id/etGroupFive"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_28pxh"
            android:paddingTop="@dimen/_19pxv"
            android:singleLine="true"
            android:text="@={registrationVM.registrationModel.etGroupFiveValue}"
            android:textColorHint="@color/black_900_66"
            style="@style/etSolidRounded_1"
            tools:ignore="Autofill" />

        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_25"
            android:ellipsize="end"
            android:hint="@string/lbl19"
            android:id="@+id/etGroupNine"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_19pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_28pxh"
            android:paddingTop="@dimen/_20pxv"
            android:singleLine="true"
            android:text="@={registrationVM.registrationModel.etGroupNineValue}"
            android:textColorHint="@color/black_900_66"
            style="@style/etSolidRounded_1"
            tools:ignore="Autofill" />

        <TextView
            android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="match_parent"
            android:text="@string/msg3"
            style="@style/txtMontserratmedium12"
            tools:text="@string/msg3" />

        <LinearLayout
            android:gravity="start"
            android:id="@+id/linearRowrectangle1st"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_43pxh"
            android:layout_marginStart="@dimen/_43pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageRectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_rectangle1st"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_rectangle1st" />

            <TextView
                android:id="@+id/txtLanguageOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15pxh"
                android:layout_weight="0.92"
                android:layout_width="0dp"
                android:text="@string/msg6"
                style="@style/txtMontserratsemibold12"
                tools:text="@string/msg6" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end"
            android:gravity="center"
            android:id="@+id/btn"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_27pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv"
            android:singleLine="true"
            android:text="@string/lbl21"
            android:textAllCaps="false"
            style="@style/btnSolidRounded_1"
            tools:text="@string/lbl21" />
    </LinearLayout>
</FrameLayout>
