<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="authorizationVM" type="com.daniiltropolsapplication.app.modules.authorization.data.viewmodel.AuthorizationVM"/>
    </data>
    <LinearLayout android:gravity="end" android:id="@+id/linearOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_100">
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:text="@{authorizationVM.authorizationModel.txtLanguage}"
            style="@style/txtRibeyeRUSBYLYAJKAribeyeregular33" tools:text="@string/msg"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_25"
            android:ellipsize="end" android:hint="@string/lbl_e_mail"
            android:id="@+id/etGroupSixtyFive"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_29pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={authorizationVM.authorizationModel.etGroupSixtyFiveValue}"
            android:textColorHint="@color/black_900_66"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_radius_25"
            android:ellipsize="end" android:hint="@string/lbl15"
            android:id="@+id/etGroupSixtySix" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_29pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@={authorizationVM.authorizationModel.etGroupSixtySixValue}"
            android:textColorHint="@color/black_900_66"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{authorizationVM.authorizationModel.txtOne}"
            style="@style/txtMontserratsemibold14" tools:text="@string/lbl16"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btn" android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_14pxv" android:singleLine="true"
            android:text="@string/lbl17" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl17"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal" android:id="@+id/txtTwo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{authorizationVM.authorizationModel.txtTwo}"
            style="@style/txtMontserratmedium14" tools:text="@string/msg2"/>
        <ImageView android:id="@+id/imageBiruzafOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_340pxh"
            android:layout_marginBottom="@dimen/_17pxv"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="@dimen/_340pxh"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_biruzaf1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_biruzaf1"/>
    </LinearLayout>
</layout>
